@@ -74,7 +74,7 @@ map_data <- function(map, region = ".", exact = FALSE, ...) {
 #' @param regions map region
 #' @param fill fill colour
 #' @param colour border colour
-#' @param "xlim, ylim" map xlim and ylim,, see \code{\link[maps]{map}} for details
+#' @param xlim,ylim latitudinal and logitudinal range for extracting map polygons, see \code{\link[maps]{map}} for details
 #' @param ... other arguments passed onto \code{\link{geom_polygon}}
 #' @export
 #' @examples
@@ -97,13 +97,13 @@ map_data <- function(map, region = ".", exact = FALSE, ...) {
 #' #Same map, with geographical context
 #' data(us.cities)
 #' capitals <- subset(us.cities, capital == 2)
-#' ggplot(capitals,aes(long,lat)) +
-#'   borders("world",xlim=c(-130,-60),ylim=c(20,50))+
+#' ggplot(capitals, aes(long, lat)) +
+#'   borders("world", xlim = c(-130, -60), ylim = c(20, 50)) +
 #'   geom_point(aes(size = pop)) +
-#'   scale_size_area()+coord_quickmap(xlim=c(-130,-60),ylim=c(20,50))
+#'   scale_size_area() + coord_quickmap(xlim = c(-130, -60), ylim = c(20, 50))
 #' }
 borders <- function(database = "world", regions = ".", fill = NA, colour = "grey50", xlim=NULL,ylim=NULL,...) {
-  df <- map_data(database, regions,xlim=xlim,ylim=ylim)
+  df <- map_data(database, regions, xlim = xlim, ylim = ylim)
   geom_polygon(aes_(~long, ~lat, group = ~group), data = df,
     fill = fill, colour = colour, ..., inherit.aes = FALSE)
 }
